[package]
name = "dht11"
version = "0.2.0"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
description = "A driver for DHT11 temperature and humidity sensor"
keywords = ["embedded-hal", "temperature", "humidity"]
edition = "2018"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb = "0.1.2"
